myteo/test/parser/ast/wildcard/wildcard_type_decl_error.myte
module test

type _ (int)